// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Details Expander smoke-test 1`] = `
<details class="nhsuk-details nhsuk-expander">
  <summary class="nhsuk-details__summary">
    <span class="nhsuk-details__summary-text">
      Opening times
    </span>
  </summary>
  <div class="nhsuk-details__text">
    <table>
      <tbody>
        <tr>
          <th>
            <strong>
              Day of the week
            </strong>
          </th>
          <th>
            <strong>
              Opening hours
            </strong>
          </th>
        </tr>
        <tr>
          <th>
            Monday
          </th>
          <td>
            9am to 6pm
          </td>
        </tr>
        <tr>
          <th>
            Tuesday
          </th>
          <td>
            9am to 6pm
          </td>
        </tr>
        <tr>
          <th>
            Wednesday
          </th>
          <td>
            9am to 6pm
          </td>
        </tr>
        <tr>
          <th>
            Thursday
          </th>
          <td>
            9am to 6pm
          </td>
        </tr>
        <tr>
          <th>
            Friday
          </th>
          <td>
            9am to 6pm
          </td>
        </tr>
        <tr>
          <th>
            Saturday
          </th>
          <td>
            9am to 1pm
          </td>
        </tr>
        <tr>
          <th>
            Sunday
          </th>
          <td>
            Closed
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</details>
`;

exports[`Components/Details ExpanderGroup smoke-test 1`] = `
<div class="nhsuk-expander-group">
  <details class="nhsuk-details nhsuk-expander">
    <summary class="nhsuk-details__summary">
      <span class="nhsuk-details__summary-text">
        How to measure your blood glucose levels
      </span>
    </summary>
    <div class="nhsuk-details__text">
      <p>
        Testing your blood at home is quick and easy, although it can be uncomfortable. It does get better.
      </p>
      <p>
        You would have been given:
      </p>
      <ul>
        <li>
          a blood glucose metre
        </li>
        <li>
          small needles called lancets
        </li>
        <li>
          a plastic pen to hold the lancest
        </li>
        <li>
          small test strips
        </li>
      </ul>
    </div>
  </details>
  <details class="nhsuk-details nhsuk-expander">
    <summary class="nhsuk-details__summary">
      <span class="nhsuk-details__summary-text">
        When to check your blood glucose level
      </span>
    </summary>
    <div class="nhsuk-details__text">
      <p>
        Try to check your blood:
      </p>
      <ul>
        <li>
          before meals
        </li>
        <li>
          2 to 3 hours after meals
        </li>
        <li>
          before, during (take a break) and after exercise
        </li>
      </ul>
      <p>
        This helps you understand your blood glucose levels and how they’re affected by meals and exercise. It should help you have more stable blood glucose levels.
      </p>
    </div>
  </details>
</div>
`;

exports[`Components/Details Standard smoke-test 1`] = `
<details class="nhsuk-details">
  <summary class="nhsuk-details__summary">
    <span class="nhsuk-details__summary-text">
      Where can I find my NHS number?
    </span>
  </summary>
  <div class="nhsuk-details__text">
    <p>
      An NHS number is a 10 digit number, like 485 777 3456.
    </p>
    <p>
      You can find your NHS number on any document sent to you by the NHS. This may include:
    </p>
    <ul>
      <li>
        prescriptions
      </li>
      <li>
        test results
      </li>
      <li>
        hospital referral letters
      </li>
      <li>
        appointment letters
      </li>
      <li>
        your NHS medical card
      </li>
    </ul>
    <p>
      Ask your GP practice for help if you can't find your NHS number.
    </p>
  </div>
</details>
`;
